--- a/Instacart_Market_Basket_Analysis.ipynb
+++ b/Instacart_Market_Basket_Analysis.ipynb
@@ -216,7 +216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=blue> - Data View</font>"
+    "## - Data View"
    ]
   },
   {
@@ -803,7 +803,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=blue>- Data Quality Check </font>"
+    "## - Data Quality Check "
    ]
   },
   {
@@ -988,7 +988,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=blue> - Feature Creation </font>"
+    "## - Feature Creation "
    ]
   },
   {
@@ -1543,7 +1543,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=blue> - Data Analysis </font>"
+    "## - Data Analysis "
    ]
   },
   {
