added user aisle prediction

--- a/Instacart_Market_Basket_Analysis.ipynb
+++ b/Instacart_Market_Basket_Analysis.ipynb
@@ -3688,41 +3688,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[nan,\n",
-       " 1.0,\n",
-       " 0.033951673342977086,\n",
-       " 0.04270667786935338,\n",
-       " 0.04655999111994955,\n",
-       " 0.023236789617464254,\n",
-       " 0.01412396807883955,\n",
-       " 0.01898927301367292,\n",
-       " 0.02882409905831599,\n",
-       " 0.04856601210300317,\n",
-       " 0.0029590785254496148,\n",
-       " 0.019409929269555842,\n",
-       " 0.02914008745511203,\n",
-       " 0.09120376006009592,\n",
-       " 0.022210808007336248,\n",
-       " 0.017044957488641925,\n",
-       " 0.0294699679454048,\n",
-       " 0.01954049311001189,\n",
-       " 0.0181822790057484,\n",
-       " 0.027657610478217475]"
-      ]
-     },
-     "execution_count": 131,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[nan, 1.0, 0.033951673342977086, 0.04270667786935338, 0.04655999111994955, 0.023236789617464254, 0.01412396807883955, 0.01898927301367292, 0.02882409905831599, 0.04856601210300317, 0.0029590785254496148, 0.019409929269555842, 0.02914008745511203, 0.09120376006009592, 0.022210808007336248, 0.017044957488641925, 0.0294699679454048, 0.01954049311001189, 0.0181822790057484, 0.027657610478217475]\n"
+     ]
     }
    ],
    "source": [
-    "aisleSimilarities[1][0:20]"
+    "print(aisleSimilarities[1][0:20])\n",
+    "# print(len(aisleSimilarities[135]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict(user):\n",
+    "    probability = [0.0]*(ratingsByAisle.shape[0])\n",
+    "    print(len(probability))\n",
+    "    for ind in range(len(probability)):\n",
+    "        for ind2 in range(len(probability)):\n",
+    "            sim = aisleSimilarities[ind][ind2]\n",
+    "            if math.isnan(sim):\n",
+    "                continue\n",
+    "            probability[ind2] += sim*ratingsByAisle[ind][user]\n",
+    "    print(probability.index(max(probability)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "135\n",
+      "123\n"
+     ]
+    }
+   ],
+   "source": [
+    "predict(5)"
    ]
   },
   {
