--- a/Market_Instacart_Basket_Analysis.ipynb
+++ b/Market_Instacart_Basket_Analysis.ipynb
@@ -9,9 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'apyori'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-66defaa6e79b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mlightfm\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mLightFM\u001b[0m \u001b[1;31m# model\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mlightfm\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mevaluation\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mauc_score\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mapyori\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mapriori\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     23\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mcollections\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mCounter\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mdatetime\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mdatetime\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'apyori'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np # linear algebra\n",
     "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
@@ -9771,7 +9783,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ranking"
+    "## Implementing Ranking type algorithm to predict item recommendation\n",
+    "\n",
+    "Before moving forward we would need ot create 2 functions\n",
+    " - topItemEachGroup: This function will obtain the top items per group\n",
+    " - drawRankTrend: This function will retrive the highest ranked item by trend. this could vary between hours, days or weekly but in this case we are using hour of the day and day of the week"
    ]
   },
   {
@@ -9815,7 +9831,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Bestseller 20 product Hour Of Day Trend"
+    "### Display trending graph of the top 20 products sold the most within the 24 Hour Of Day"
    ]
   },
   {
@@ -9853,15 +9869,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### There is almost no change to the 1st to 6th place, and there seems to be some change after that.\n",
-    "##### You can see that Working Hour (9H~17H) and other time patterns are very different."
+    "##### Based on above graph:\n",
+    "There is a small change between organic strawberries and organic baby spinash for the first 3 hours but it remains consistent after those hours for the top 5 items throughout the day. \n",
+    "\n",
+    "For the rest of the items there is definitely change in their trend based on ranking for example: organic whole milk started at 10th place and ended in the 8th with a max rank of 6 and lowest been 17.\n",
+    "\n",
+    "You can see that Working Hour (9H~17H) and other time patterns are very different."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Bestseller 20 product Day Of Week Trend"
+    "### Shocase the Trending top 20 products based on the Day of the Week"
    ]
   },
   {
@@ -9899,17 +9919,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Product Bundle Recommendation"
+    "##### Based on the previous graph shown:\n",
+    "\n",
+    "the top 6 items barely change through out the week with the exception of the first day that organic strawberries and organic baby spinach change. This reiterates previous finding of both items changing at the beginning of the 24 hours"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Using the product bundles to predict which product customers will buy next? \n",
-    "Once a customer adds one product to cart, we will offer a list of recommended products to be bought together. \n",
-    "The customer might then choose some products from the recommendation list. \n",
-    "If we can predict the right product bundles and offer relevant recommendation, we can help customers in finding the right products and it also helps in boosting sales and profits."
+    "## In the next part we will be recommending a Product through Bundles"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### How does this Product Bunle work in order to recommend the customer what will they buy next?\n",
+    "\n",
+    "Customers will add a product to their cart and we will offer them a recommendation list of items that are mostly matched with their added item to the cart based on previous parterns and similarity of products.\n",
+    "\n",
+    "This will allow the customer select some products from the recommendation list without making them search for the product and if we are able to predict the right product bundles and offer relevant recommendations. This will improve the experience to customers in finding the right products while boosting sales and profits for the e-commerce"
    ]
   },
   {
@@ -9950,7 +9980,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Spark dataframe： read in batch of 10000 due to large computation"
+    "##### Spark dataframe： requires to read in chunks of 10000 items due to large quantity of  computation required"
    ]
   },
   {
@@ -9997,7 +10027,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Creating a bigram which will be the names of two products that are bought one after another"
+    "##### Creating a bigram that will show the name of two products that are bought consecutively"
    ]
   },
   {
@@ -10028,7 +10058,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Now, after we got the bigrams, we start counting the frequency of each."
+    "##### After getting the bigrams, we count the frequency of each product"
    ]
   },
   {
@@ -10071,8 +10101,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Popular Bundles\n",
-    "These are the combination appears more than 20 times"
+    "### Show the most Popular Bundles\n",
+    "The popular bundle is generated by obtaining the combination of product that appear more than 20 times. Anything else is assumed to not be popular, this can always be changed depending on the threshold requested"
    ]
   },
   {
@@ -10199,7 +10229,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Testing : Given the previous product, 15 products are recommended to predict the next product that need to be bought"
+    "##### In the following test we used \"Bag of Organic Bananas\" as previous product added to the cart and requested 15 items to be recommended in order to predict what the customer would buy"
    ]
   },
   {
@@ -10298,12 +10328,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Collaborative Filtering User-Item recommendation system"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "products = pd.read_csv('products.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Preprocessing Aisles and Departments dataset"
    ]
   },
   {
@@ -10318,6 +10362,13 @@
     "\n",
     "aisles = aisles[aisles[\"aisle\"].apply(lambda x: x != \"missing\" and x != \"other\")]\n",
     "departments = departments[departments[\"department\"].apply(lambda x: x != \"missing\" and x != \"other\")]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating functions that will be used later on"
    ]
   },
   {
@@ -10472,6 +10523,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create the Lists for user, item and features. These lists will be needed in order to  recommend items based on user previously bought items"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
@@ -10585,6 +10643,13 @@
    "source": [
     "features = get_feature_list(aisles, departments, \"aisle\", \"department\")\n",
     "features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Map the features to index so we can use the LightFM library that requires integer index"
    ]
   },
   {
@@ -10770,6 +10835,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluate the data of how many times a product was ordered by a user in train and test set"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {},
@@ -10947,6 +11019,16 @@
    ],
    "source": [
     "user_to_product_rating_test.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### After evaluating the data we create different matrices.\n",
+    "\n",
+    " - Product-Feature Matrix:  This will allow to know how many type a certain product was ordered and feature it is(type of product)\n",
+    " - User-Product Matrix (Train & Test): This will obtain the relationship between user and product in the train and test set"
    ]
   },
   {
@@ -11133,7 +11215,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Applying LightFM Cross Validation"
+    "# Implementing LightFM Cross Validation"
    ]
   },
   {
@@ -11233,7 +11315,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Adding item features as consideration"
+    "#### After modeling the data through LightFM algo without features we found out that it's average AUC is 0.95 as shown in the above code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### This time we will include item features and see if it increases or reduces the AUC"
    ]
   },
   {
@@ -11333,7 +11422,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### we need to combine the training and the test set and retrain everything"
+    "##### We now need to retrain the model because we will be combining train and test set for the next part"
    ]
   },
   {
@@ -11451,7 +11540,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Printing Out Recommendations for user 6 and user 20 (sample)"
+    "### Creating class that contains functions in order to predict the recommendation based on user\n",
+    "\n",
+    "the prediction will be based on previous matrix mentioned such as user-product matrix"
    ]
   },
   {
@@ -11514,6 +11605,13 @@
    "source": [
     "# giving recommendations\n",
     "recom = recommendation_sampling(model = final_model)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Display the Recommendated products for user 6 and user 30 (sample)"
    ]
   },
   {
