added conclusion to keep consistency with PPT and more comments for easier understanding of the code. in additon added some markdowns such as graph information

--- a/Market_Instacart_Basket_Analysis.ipynb
+++ b/Market_Instacart_Basket_Analysis.ipynb
@@ -11530,7 +11530,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### After modeling the data through LightFM algo without features we found out that it's average AUC is 0.80 as shown in the above code"
+    "#### After modeling the data through LightFM algo with features we found out that it's average AUC is 0.80 reducing its accuracy from previous modeling when not using features"
    ]
   },
   {
@@ -11596,6 +11596,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Combining train and test user-product interaction\n",
     "user_to_product_interaction = combined_train_test(user_to_product_interaction_train, \n",
     "                                                 user_to_product_interaction_test)"
    ]
