Project checkpoint 2 changes

--- a/Market_Instacart_Basket_Analysis.ipynb
+++ b/Market_Instacart_Basket_Analysis.ipynb
@@ -5853,7 +5853,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The best model for predicting whether a product will be reorodered or not is the Gradient Boosting Classifier with 0.67 accuracy. Whereas while predicting the category of the department, Random Forest Classifier is the best model with a log loss score of 2.342."
+    "###### The best model for predicting whether a product will be reorodered or not is the Gradient Boosting Classifier with 70.6 accuracy. Whereas while predicting the category of the department, Random Forest Classifier is the best model with a log loss score of 2.321."
    ]
   },
   {
