Project checkpoint 2 changes

--- a/Market_Instacart_Basket_Analysis.ipynb
+++ b/Market_Instacart_Basket_Analysis.ipynb
@@ -3752,7 +3752,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Using Linear models"
+    "# Using ML models"
    ]
   },
   {
